--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
+        <span>B</span>
+        <span>D</span>
+        <span>I</span>
+        <span>Q</span>
+        <span>I</span>
+        <span>S</span>
+        <span>S</span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
